fix(test): 修改测试用例以使用虚拟线程执行器并减少等待时间
为提高测试效率，将测试用例中的线程池改为使用`Executors.newVirtualThreadPerTaskExecutor()`。同时，将测试结束前的等待时间从10秒缩短至5秒，以减少测试用时而不影响测试效果。